sign in implemented

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,7 @@
-<h1 id="title" class="title">Sign In</h1>
+<div class="text-center">
+<img src="assets/svg/passmeLogoDark.svg" alt="logo">
+</div>
+<!--<h1 id="title" class="title">Sign In</h1>-->
 
 <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
   <p class="alert-title"><b>Oh snap!</b></p>
