--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -17,15 +17,15 @@
 </div>
 
 <div class="row">
-  <div class="col-xxxl-9 col-xl-12">
+  <div class="col-xxxl-9 col-xl-12"> hi
     <ngx-rooms></ngx-rooms>
   </div>
 
-  <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">
+  <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">afo
     <ngx-contacts></ngx-contacts>
   </div>
 
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">opa
     <ngx-solar [chartValue]="solarValue"></ngx-solar>
 
     <ngx-kitten></ngx-kitten>
