--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -104,5 +104,5 @@
 </section>
 
 <section class="another-action" aria-label="Register">
-  Don't have an account? <a class="text-link" routerLink="/auth/register">Sign Up</a>
+  Don't have an account? <a class="text-link" routerLink="../register">Sign Up</a>
 </section>
