--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -14,26 +14,22 @@
   </ul>
 </nb-alert>
 
-<form (ngSubmit)="submitForm()" #form="ngForm" aria-labelledby="title">
+<form (ngSubmit)="signUp()" [formGroup]="signupForm"  aria-labelledby="title">
 
   <div class="form-control-group">
     <label class="label" for="input-email">Email address:</label>
     <input nbInput
-           [(ngModel)]="user.email"
-           #email="ngModel"
+           formControlName="email"
            id="input-email"
            name="email"
-           pattern=".+@.+..+"
            placeholder="Email address"
            fullWidth
-           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
-           [required]="getConfigValue('forms.validation.email.required')"
-           [attr.aria-invalid]="email.invalid && email.touched ? true : null">
-    <ng-container *ngIf="email.invalid && email.touched">
-      <p class="error-message" *ngIf="email.errors?.required">
+      >
+    <ng-container *ngIf="signupForm.controls.email.invalid && signupForm.controls.email.touched">
+      <p class="error-message" *ngIf="signupForm.controls.email.errors?.required">
         Email is required!
       </p>
-      <p class="error-message" *ngIf="email.errors?.pattern">
+      <p class="error-message" *ngIf="signupForm.controls.email.errors?.email">
         Email should be the real one!
       </p>
     </ng-container>
@@ -42,27 +38,20 @@
   <div class="form-control-group">
     <label class="label" for="input-password">Password:</label>
     <input nbInput
-           [(ngModel)]="user.password"
-           #password="ngModel"
+           formControlName="password"
            type="password"
            id="input-password"
            name="password"
            placeholder="Password"
            fullWidth
-           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
-           [required]="getConfigValue('forms.validation.password.required')"
-           [minlength]="getConfigValue('forms.validation.password.minLength')"
-           [maxlength]="getConfigValue('forms.validation.password.maxLength')"
-           [attr.aria-invalid]="password.invalid && password.touched ? true : null">
-    <ng-container *ngIf="password.invalid && password.touched">
-      <p class="error-message" *ngIf="password.errors?.required">
+           [attr.aria-invalid]="signupForm.controls.password.errors && signupForm.controls.password.touched ? true : null"
+    >
+    <ng-container *ngIf="signupForm.controls.password.invalid && signupForm.controls.password.touched">
+      <p class="error-message" *ngIf="signupForm.controls.password.errors?.required">
         Password is required!
       </p>
-      <p class="error-message" *ngIf="password.errors?.minlength || password.errors?.maxlength">
-        Password should contains
-        from {{ getConfigValue('forms.validation.password.minLength') }}
-        to {{ getConfigValue('forms.validation.password.maxLength') }}
-        characters
+      <p class="error-message" *ngIf="signupForm.controls.password.errors?.minlength">
+        Password should contains at least 8 characters
       </p>
     </ng-container>
   </div>
@@ -70,36 +59,37 @@
   <div class="form-control-group">
     <label class="label" for="input-re-password">Repeat password:</label>
     <input nbInput
-           [(ngModel)]="user.confirmPassword"
-           #rePass="ngModel"
+           formControlName="confirmPassword"
            type="password"
            id="input-re-password"
            name="rePass"
            placeholder="Confirm Password"
            fullWidth
-           [status]="email.dirty ? (email.invalid || password.value != rePass.value  ? 'danger' : 'success') : ''"
-           [required]="getConfigValue('forms.validation.password.required')"
-           [attr.aria-invalid]="rePass.invalid && rePass.touched ? true : null">
-    <ng-container *ngIf="rePass.invalid && rePass.touched">
-      <p class="error-message" *ngIf="rePass.errors?.required">
+           [attr.aria-invalid]="signupForm.controls.confirmPassword.errors && signupForm.controls.confirmPassword.touched ? true : null">
+    <ng-container *ngIf="signupForm.controls.confirmPassword.invalid && signupForm.controls.confirmPassword.touched">
+      <p class="error-message" *ngIf="signupForm.controls.password.errors?.required">
         Password confirmation is required!
       </p>
-      <p class="error-message" *ngIf="password.value != rePass.value && !rePass.errors?.required">
+      <p class="error-message" *ngIf="signupForm.controls.confirmPassword.errors?.confirmedValidator">
         Password does not match the confirm password.
+      </p>
+      <p class="error-message" *ngIf="signupForm.controls.confirmPassword.errors?.minlength">
+        Password should contains at least 8 characters
       </p>
     </ng-container>
   </div>
 
-  <div class="form-control-group accept-group" *ngIf="getConfigValue('forms.register.terms')">
-    <nb-checkbox name="terms" [(ngModel)]="user.terms" [required]="getConfigValue('forms.register.terms')">
-      Agree to <a href="#" target="_blank"><strong>Terms & Conditions</strong></a>
+  <div class="form-control-group accept-group">
+
+    <nb-checkbox name="terms" formControlName="terms" areia="area">
+      Agree to <a routerLink="/" target="_blank"><strong>Terms & Conditions</strong></a>
     </nb-checkbox>
   </div>
 
   <button nbButton
           fullWidth
           status="success"
-          [disabled]="submitted || !form.valid"
+          [disabled]="signupForm.invalid || signupForm.controls.terms?.value == false"
           [class.btn-pulse]="submitted">
     Register
   </button>
