--- a/src/app/auth/on-boarding/on-boarding.component.html
+++ b/src/app/auth/on-boarding/on-boarding.component.html
@@ -1,1 +1,31 @@
-<p>on-boarding works!</p>
+<h1 id="title" class="title">Account Setup</h1>
+
+<form [formGroup]="onboardForm" (ngSubmit)= "onBoard()">
+
+  <div class="form-control-group">
+    <label class="label" for="business_name">Business name:</label>
+    <input nbInput
+           formControlName="business_name"
+           id="business_name"
+           name="business_name"
+           placeholder="Business name"
+           fullWidth
+    >
+    <ng-container *ngIf="onboardForm.controls.business_name.invalid && onboardForm.controls.business_name.touched">
+      <p class="error-message" *ngIf="onboardForm.controls.business_name.errors?.required">
+       Business name is required!
+      </p>
+    </ng-container>
+  </div>
+
+
+
+
+  <button nbButton
+          fullWidth
+          status="success"
+          [disabled]="onboardForm.invalid"
+          >
+    Register
+  </button>
+</form>
