--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,41 +3,23 @@
 </div>
 <!--<h1 id="title" class="title">Sign In</h1>-->
 
-<nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
-  <p class="alert-title"><b>Oh snap!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
-  </ul>
-</nb-alert>
 
-<nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
-  <p class="alert-title"><b>Hooray!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
-  </ul>
-</nb-alert>
-
-<form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
+<form (ngSubmit)="login()" [formGroup]="signInForm" aria-labelledby="title">
 
   <div class="form-control-group">
     <label class="label" for="input-email">Email address:</label>
     <input nbInput
-           fullWidth
-           [(ngModel)]="user.email"
-           #email="ngModel"
-           name="email"
+           formControlName="email"
            id="input-email"
-           pattern=".+@.+\..+"
+           name="email"
            placeholder="Email address"
-           autofocus
-           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : 'basic'"
-           [required]="getConfigValue('forms.validation.email.required')"
-           [attr.aria-invalid]="email.invalid && email.touched ? true : null">
-    <ng-container *ngIf="email.invalid && email.touched">
-      <p class="caption status-danger" *ngIf="email.errors?.required">
+           fullWidth
+    >
+    <ng-container *ngIf="signInForm.controls.email.invalid && signInForm.controls.email.touched">
+      <p class="error-message" *ngIf="signInForm.controls.email.errors?.required">
         Email is required!
       </p>
-      <p class="caption status-danger" *ngIf="email.errors?.pattern">
+      <p class="error-message" *ngIf="signInForm.controls.email.errors?.email">
         Email should be the real one!
       </p>
     </ng-container>
@@ -46,62 +28,37 @@
   <div class="form-control-group">
     <label class="label" for="input-password">Password:</label>
     <input nbInput
-           fullWidth
-           [(ngModel)]="user.password"
-           #password="ngModel"
-           name="password"
+           formControlName="password"
            type="password"
            id="input-password"
+           name="password"
            placeholder="Password"
-           [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : 'basic'"
-           [required]="getConfigValue('forms.validation.password.required')"
-           [minlength]="getConfigValue('forms.validation.password.minLength')"
-           [maxlength]="getConfigValue('forms.validation.password.maxLength')"
-           [attr.aria-invalid]="password.invalid && password.touched ? true : null">
-    <ng-container *ngIf="password.invalid && password.touched ">
-      <p class="caption status-danger" *ngIf="password.errors?.required">
+           fullWidth
+           [attr.aria-invalid]="signInForm.controls.password.errors && signInForm.controls.password.touched ? true : null"
+    >
+    <ng-container *ngIf="signInForm.controls.password.invalid && signInForm.controls.password.touched">
+      <p class="error-message" *ngIf="signInForm.controls.password.errors?.required">
         Password is required!
       </p>
-      <p class="caption status-danger" *ngIf="(password.errors?.minlength || password.errors?.maxlength)">
-        Password should contains
-        from {{ getConfigValue('forms.validation.password.minLength') }}
-        to {{ getConfigValue('forms.validation.password.maxLength') }}
-        characters
+      <p class="error-message" *ngIf="signInForm.controls.password.errors?.minlength">
+        Password should contains at least 8 characters
       </p>
     </ng-container>
   </div>
 
   <div class="form-control-group accept-group">
-    <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Remember me</nb-checkbox>
+    <nb-checkbox name="rememberMe">Remember me</nb-checkbox>
     <a class="forgot-password" routerLink="../request-password">Forgot Password?</a>
   </div>
 
   <button nbButton
           fullWidth
           status="success"
-          [disabled]="submitted || !form.valid"
-          [class.btn-pulse]="submitted">
+          [disabled]="signInForm.invalid"
+         >
     Sign In
   </button>
 </form>
-
-<section *ngIf="socialLinks && socialLinks.length > 0" class="links" aria-label="Social sign in">
-  Or connect with:
-  <div class="socials">
-    <ng-container *ngFor="let socialLink of socialLinks">
-      <a *ngIf="socialLink.link"
-         [routerLink]="socialLink.link"
-         [attr.target]="socialLink.target"
-         [attr.class]="socialLink.icon"
-         [class.with-icon]="socialLink.icon">{{ socialLink.title }}</a>
-      <a *ngIf="socialLink.url"
-         [attr.href]="socialLink.url"
-         [attr.target]="socialLink.target"
-         [attr.class]="socialLink.icon"
-         [class.with-icon]="socialLink.icon">{{ socialLink.title }}</a>
-    </ng-container>
-  </div>
-</section>
 
 <section class="another-action" aria-label="Register">
   Don't have an account? <a class="text-link" routerLink="../register">Sign Up</a>
