--- a/src/app/pages/e-commerce/e-commerce.component.html
+++ b/src/app/pages/e-commerce/e-commerce.component.html
@@ -1,21 +1,20 @@
 <div class="row">
-  <div class="col-xxl-7">
-    <ngx-ecommerce-charts></ngx-ecommerce-charts>
+  <div class="col-xxl-10">
+    <ngx-user-activity></ngx-user-activity>
   </div>
 
   <div class="col-xxl-5">
-    <ngx-ecommerce-visitors-analytics></ngx-ecommerce-visitors-analytics>
+<!--    <ngx-ecommerce-visitors-analytics></ngx-ecommerce-visitors-analytics>-->
   </div>
 </div>
 
 <div class="row">
   <div class="col-xxl-9">
 <!--    <ngx-country-orders></ngx-country-orders>-->
-    <ngx-user-activity></ngx-user-activity>
   </div>
 
   <div class="col-xxl-3">
-    <ngx-progress-section></ngx-progress-section>
+<!--    <ngx-progress-section></ngx-progress-section>-->
   </div>
 </div>
 
