--- a/src/app/pages/dashboard/contacts/contacts.component.html
+++ b/src/app/pages/dashboard/contacts/contacts.component.html
@@ -1,7 +1,7 @@
 <nb-card size="giant">
   <nb-tabset fullWidth>
 
-    <nb-tab tabTitle="Contacts">
+    <nb-tab tabTitle="Employees">
       <nb-list>
         <nb-list-item class="contact" *ngFor="let c of contacts">
           <nb-user [picture]="c.user.picture" [name]="c.user.name" [title]="c.type" size="large"></nb-user>
