--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -7,21 +7,24 @@
 </div>
 
 <div class="row">
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
-    <ngx-temperature></ngx-temperature>
-  </div>
+<!--  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">-->
+<!--    <ngx-temperature></ngx-temperature>-->
+<!--  </div>-->
 
-  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
-    <ngx-electricity></ngx-electricity>
+<!--  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">-->
+<!--    <ngx-electricity></ngx-electricity>-->
+<!--  </div>-->
+  <div class="col-xxl-12">
+    <ngx-ecommerce-charts></ngx-ecommerce-charts>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-xxxl-9 col-xl-12"> hi
-    <ngx-rooms></ngx-rooms>
-  </div>
+<!--  <div class="col-xxxl-9 col-xl-12"> hi-->
+<!--    <ngx-rooms></ngx-rooms>-->
+<!--  </div>-->
 
-  <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">afo
+  <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">
     <ngx-contacts></ngx-contacts>
   </div>
 
