--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row justify-content-end">
   <div class="col-xxxl-3 col-md-6" *ngFor="let statusCard of statusCards">
     <ngx-status-card [title]="statusCard.title" [type]="statusCard.type">
       <i [ngClass]="statusCard.iconClass"></i>
@@ -28,18 +28,18 @@
     <ngx-contacts></ngx-contacts>
   </div>
 
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">opa
-    <ngx-solar [chartValue]="solarValue"></ngx-solar>
+<!--  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">-->
+<!--    <ngx-solar [chartValue]="solarValue"></ngx-solar>-->
 
-    <ngx-kitten></ngx-kitten>
-  </div>
+<!--    <ngx-kitten></ngx-kitten>-->
+<!--  </div>-->
 
-  <div class="col-xxxl-3 col-xxl-4 col-md-5">
-    <ngx-traffic></ngx-traffic>
-    <ngx-weather></ngx-weather>
-  </div>
+<!--  <div class="col-xxxl-3 col-xxl-4 col-md-5">-->
+<!--    <ngx-traffic></ngx-traffic>-->
+<!--    <ngx-weather></ngx-weather>-->
+<!--  </div>-->
 
-  <div class="col-xxxl-6 col-xxl-12 col-md-7">
-    <ngx-security-cameras></ngx-security-cameras>
-  </div>
+<!--  <div class="col-xxxl-6 col-xxl-12 col-md-7">-->
+<!--    <ngx-security-cameras></ngx-security-cameras>-->
+<!--  </div>-->
 </div>
