--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -54,6 +54,7 @@
   <button nbButton
           fullWidth
           status="success"
+          type="submit"
           [disabled]="signInForm.invalid"
          >
     Sign In
